--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <a href="https://flatironschool.com">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
+  <a href="../index.html"></a>Relative Path (internal link)
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a></a><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
 
 </body>
 </html>
