--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="https://flatironschool.com">Absolute Path (external link)</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  <a href="../index.html"></a>Relative Path (internal link)
+  <a href="../index.html">Relative Path (internal link)</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
